Cycles point density interpolation failing #46358

Closed
opened 2015-10-03 16:26:44 +02:00 by Thomas Beck · 12 comments
Member

Hi Sergey,

this one's for you... sorry!

System Information
i7 16GB RAM, 2*GTX 560 ti oc 2GB each, Ubuntu 64 15.04

Blender Version
Broken: 83a94cb

Short description of error
Switching the interpolation type from "closest" to "linear" in the appending file ( Cycles_PointDensityCloudsTest_Bug.blend ) will create cloud parts at the domain borders. It's more prominent with smaller resolutions.

Exact steps for others to reproduce the error
Preview render with Shift+Z, switch the interpolation type from "closest" to "linear" in the appending file -> at the lower domain border a new cut cloud is appearing. Try "Cubic" afterwards to see even more cloud parts at the borders (the left side).

Apart from that:

  • I got several crashes when I move the domain while being in Shift+Z mode... seems like a threading issue...
  • Moving the domain (G) and aborting the movement by RMB will cut the cloud

Many greetings,
Thomas

Hi Sergey, this one's for you... sorry! **System Information** i7 16GB RAM, 2*GTX 560 ti oc 2GB each, Ubuntu 64 15.04 **Blender Version** Broken: 83a94cb **Short description of error** Switching the interpolation type from "closest" to "linear" in the appending file ( [Cycles_PointDensityCloudsTest_Bug.blend](https://archive.blender.org/developer/F241917/Cycles_PointDensityCloudsTest_Bug.blend) ) will create cloud parts at the domain borders. It's more prominent with smaller resolutions. **Exact steps for others to reproduce the error** Preview render with Shift+Z, switch the interpolation type from "closest" to "linear" in the appending file -> at the lower domain border a new cut cloud is appearing. Try "Cubic" afterwards to see even more cloud parts at the borders (the left side). Apart from that: - I got several crashes when I move the domain while being in Shift+Z mode... seems like a threading issue... - Moving the domain (G) and aborting the movement by RMB will cut the cloud Many greetings, Thomas
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Thomas Beck 2015-10-03 16:26:44 +02:00
Author
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

I can confirm this even with 9ad829d

I can confirm this even with 9ad829d
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

I got a crash once when accidentally connecting the point density node to the displacement output

I got a crash once when accidentally connecting the point density node to the displacement output

This issue was referenced by 1a65289a12

This issue was referenced by 1a65289a122f31122ce740168e6d0072cbe60041

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@Blendify, please don't mix different issues into a single report. Find a reproduceable case and submit a separate report.

@Blendify, please don't mix different issues into a single report. Find a reproduceable case and submit a separate report.
Member

@Sergey the report mentions this more or less:

I got several crashes when I move the domain while being in Shift+Z mode... seems like a threading issue...

@Sergey the report mentions this more or less: >I got several crashes when I move the domain while being in Shift+Z mode... seems like a threading issue...
Author
Member

@Blendify This was just an additional info. When I like this specific bug to be fixed, I'll report that separately with a file that shows the issue. Otherwise it's just guessing...

@Sergey tested it and it works tiptop - thanks!

@Blendify This was just an additional info. When I like this specific bug to be fixed, I'll report that separately with a file that shows the issue. Otherwise it's just guessing... @Sergey tested it and it works tiptop - thanks!

This issue was referenced by blender/cycles@2daf62b809

This issue was referenced by blender/cycles@2daf62b809822de5e35ea318503135343420d187
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46358
No description provided.