Fix T46358: Cycles point density uses repeat extension type